--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
     {{>header}}
     
     <img src="./img/Selection_001.bmp" style= "width : 190px;">
-    <p>So Mayank did his BTech from {{college}} in {{branch}}</p>
+
+    <p>Creator of this did his college from {{college}} in {{branch}}</p>
     {{>footer}}
 </body>
 </html>
